<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Localización Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="posicion_actual">Posición Actual:</string>
    <string name="activar">On</string>
    <string name="desactivar">Off</string>
    <string name="estado_proveedor">Estado proveedor:</string>

    <string name="val">N:</string>
    <string name="nreg">C:</string>
    <string name="ins">Ins</string>
    <string name="act">Act</string>
    <string name="elim">Elim</string>
    <string name="cons">Cons</string>
</resources>