<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView android:id="@+id/LblPosicion"
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/posicion_actual" />
    
	<TextView android:id="@+id/LblPosLatitud"
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginBottom="5dp"
	    android:background="#aaaaaa" 
	    android:textColor="#000000" />
	    
	<TextView android:id="@+id/LblPosLongitud"
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content" 
	    android:layout_marginBottom="5dp"
	    android:background="#aaaaaa" 
	    android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/BtnActualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activar" />

        <Button
            android:id="@+id/BtnDesactivar"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/desactivar" />

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cons" />

        <Button
            android:id="@+id/btnInsertar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ins" />

    </LinearLayout>
	 <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />
	
</LinearLayout>